fix: fix svg blurry icon for all pages

--- a/public/assets/master.css
+++ b/public/assets/master.css
@@ -1665,10 +1665,16 @@ body {
     .support {
     margin-left: -300px;
     } */
-    .software-col1 img{
-        width: 60px;
-        height: 60px;
+    .software-col1 {
+        width: 60px; 
+        height: 60px; 
     }
+    
+    .svg-image {
+        width: 100%; 
+        height: 100%; 
+    }
+    
     .website-col4 img{
         width: 100px;
         margin-right: 20px;
@@ -6094,7 +6100,7 @@ body {
     display: none;
 }
 
-.report5-col1 img {
+.report5-col1 object {
     width: 585px;
     height: 448px;
 }
@@ -6176,7 +6182,7 @@ body {
 .report-col4 {
     margin-right: 26px;
 }
-.report-col4 img {
+.report-col4 object {
     width: 585px;
     height: 448px;
 }
@@ -6223,7 +6229,7 @@ body {
     margin-left: 20px;
 }
 
-.report7-col5 img {
+.report7-col5 object {
     width: 585px;
     height: 445px;
 }
@@ -6427,7 +6433,7 @@ body {
 .sector4 {
     margin-bottom: 138px;
 }
-.sector4 img{
+.sector4 object{
     width: 100%;
     height: auto;
     flex-shrink: 0;
@@ -6647,7 +6653,7 @@ body {
 .career3 {
     margin-bottom: 0px;
 }
-.career3 img {
+.career3 object{
     width: 100%;
     margin-bottom: 128px;
 }
